--- a/ami/blueprints/admin/templates/admin/data/daily.html
+++ b/ami/blueprints/admin/templates/admin/data/daily.html
@@ -21,10 +21,13 @@
             <thead>
             <tr>
                 <th class="col-header">
-                    {{ items.sort('meter.sequence_number', 'Sequence Number') }}
+                    {{ items.sort('capture_time', 'Data Time') }}
                 </th>
                 <th class="col-header">
                     {{ items.sort('meter.serial_number', 'Serial Number') }}
+                </th>
+                <th class="col-header">
+                    {{ items.sort('meter.sequence_number', 'Sequence Number') }}
                 </th>
                 <th class="col-header">
                     {{ items.sort('active_increase', 'Active Increase') }}
@@ -32,36 +35,16 @@
                 <th class="col-header">
                     {{ items.sort('total_active', 'Total Active') }}
                 </th>
-                <th class="col-header">
-                    {{ items.sort('import_active', 'Import Active') }}
-                </th>
-                <th class="col-header">
-                    {{ items.sort('export_active', 'Export Active') }}
-                </th>
-                <th class="col-header">
-                    {{ items.sort('import_apparent', 'Import Apparent') }}
-                </th>
-                <th class="col-header">
-                    {{ items.sort('export_apparent', 'Export Apparent') }}
-                </th>
-                <th class="col-header">
-                    {{ items.sort('capture_time', 'Time') }}
-                </th>
-
             </tr>
             </thead>
             <tbody>
             {% for daily in data.items %}
                 <tr>
-                    <td>{{ daily.meter.sequence_number }}</td>
+                    <td>{{ daily.capture_time }}</td>
                     <td>{{ daily.meter.serial_number }}</td>
+                    <td>{{ daily.meter.sequence_number }}</td>
                     <td>{{ daily.active_increase }}</td>
                     <td>{{ daily.total_active }}</td>
-                    <td>{{ daily.import_active }}</td>
-                    <td>{{ daily.export_active }}</td>
-                    <td>{{ daily.import_apparent }}</td>
-                    <td>{{ daily.export_apparent }}</td>
-                    <td>{{ daily.capture_time }}</td>
                 </tr>
             {% endfor %}
             </tbody>
