--- a/ami/blueprints/admin/templates/admin/data/monthly.html
+++ b/ami/blueprints/admin/templates/admin/data/monthly.html
@@ -21,54 +21,34 @@
             <thead>
             <tr>
                 <th class="col-header">
-                    {{ items.sort('meter.sequence_number', 'Sequence Number') }}
+                    {{ items.sort('capture_time', 'Data Time') }}
                 </th>
                 <th class="col-header">
                     {{ items.sort('meter.serial_number', 'Serial Number') }}
                 </th>
                 <th class="col-header">
-                    {{ items.sort('active_increase', 'Active Increase') }}
+                    {{ items.sort('meter.sequence_number', 'Sequence Number') }}
+                </th>
+                <th class="col-header">
+                    {{ items.sort('monthly_active_increase', 'Monthly Active Increase') }}
                 </th>
                 <th class="col-header">
                     {{ items.sort('total_active', 'Total Active') }}
                 </th>
                 <th class="col-header">
-                    {{ items.sort('import_active', 'Import Active') }}
-                </th>
-                <th class="col-header">
-                    {{ items.sort('export_active', 'Export Active') }}
-                </th>
-                <th class="col-header">
-                    {{ items.sort('import_apparent', 'Import Apparent') }}
-                </th>
-                <th class="col-header">
-                    {{ items.sort('export_apparent', 'Export Apparent') }}
-                </th>
-                <th class="col-header">
-                    {{ items.sort('import_reactive', 'Import Reactive') }}
-                </th>
-                <th class="col-header">
-                    {{ items.sort('export_reactive', 'Export Reactive') }}
-                </th>
-                <th class="col-header">
-                    {{ items.sort('capture_time', 'Data Time') }}
+                    {{ items.sort('total_import_active', 'Total Import Active') }}
                 </th>
             </tr>
             </thead>
             <tbody>
-            {% for alert in data.items %}
+            {% for x in data.items %}
                 <tr>
-                    <td>{{ alert.meter.sequence_number }}</td>
-                    <td>{{ alert.meter.serial_number }}</td>
-                    <td>{{ alert.active_increase }}</td>
-                    <td>{{ alert.total_active }}</td>
-                    <td>{{ daily.import_active }}</td>
-                    <td>{{ daily.export_active }}</td>
-                    <td>{{ daily.import_apparent }}</td>
-                    <td>{{ daily.export_apparent }}</td>
-                    <td>{{ daily.import_reactive }}</td>
-                    <td>{{ daily.export_reactive }}</td>
-                    <td>{{ alert.capture_time }}</td>
+                    <td>{{ x.capture_time }}</td>
+                    <td>{{ x.meter.serial_number }}</td>
+                    <td>{{ x.meter.sequence_number }}</td>
+                    <td>{{ x.monthly_active_increase }}</td>
+                    <td>{{ x.total_active }}</td>
+                    <td>{{ x.total_import_active }}</td>
                 </tr>
             {% endfor %}
             </tbody>
